2008-09-02  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/SecurityDeclarationReader.cs: fix reading
	multiple permissions. Patch by Carsten Keutmann.

2008-09-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs: properly compose mod and byref types
	for parameters and return types.
	Based on a patch by Carlo Kok <ck@remobjects.com>

2008-09-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Signatures/SignatureReader.cs: Avoid a crash
	when looking for an enumeration definition when the assembly
	could not be resolved. Patch by Carlo Kok <ck@remobjects.com>

2008-09-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs: fix for writing null string
	constants. Patch by Ewout Prangsma <ewout@tallapplications.com>.

2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.dll.sources
	* Mono.Xml/MiniParser.cs:
		Remove MiniParser as it is no more required (replaced by
		SmallXmlParser) and save a few KB in the binary size

	* Mono.Xml/SecurityParser.cs
	* Mono.Xml/SmallXmlParser.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil.Signatures/GenericArg.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil.Binary/CopyImageVisitor.cs
	* Mono.Cecil.Binary/ImageInitializer.cs
	* Mono.Cecil.Binary/ImageReader.cs
	* Mono.Cecil.Binary/ImageWriter.cs
	* Mono.Cecil.Binary/ResourceReader.cs
	* Mono.Cecil.Binary/ResourceWriter.cs:
		Seal non-visible classes.
		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]

	* Mono.Cecil.Metadata/CultureUtils.cs
	* Mono.Cecil.Metadata/MetadataInitializer.cs
	* Mono.Cecil.Metadata/MetadataReader.cs
	* Mono.Cecil.Metadata/MetadataRowReader.cs
	* Mono.Cecil.Metadata/MetadataRowWriter.cs
	* Mono.Cecil.Metadata/MetadataTableReader.cs
	* Mono.Cecil.Metadata/Utilities.cs:
		Seal non-visible classes.